--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,28 +35,27 @@
                     <input type="radio" name="radio-btn" id="radio3">
                     <input type="radio" name="radio-btn" id="radio4">
                     <input type="radio" name="radio-btn" id="radio5">
-                    <div class="carousel--card carousel--card-1">
 
+                    <div class="carousel--card carousel--card-1">
+                        <p class="carousel--card--content"><em><strong style="color: #efefef;font-size: 40px;letter-spacing: 2px">
+                            МЕТОД РАЦИОНАЛИЗАЦИИ</strong></em></p>
                     </div>
                     <div class="carousel--card carousel--card-2">
-
+                        <p class="carousel--card--content"><em><strong style="color: #efefef;font-size: 40px;letter-spacing: 2px">
+                            ПРОИЗВОДНАЯ ФУНКЦИИ</strong></em></p>
                     </div>
                     <div class="carousel--card carousel--card-3">
-
+                        <p class="carousel--card--content"><em><strong style="color: #efefef;font-size: 40px;letter-spacing: 2px">
+                            МЕТОД РАЦИОНАЛИЗАЦИИ</strong></em></p>
                     </div>
                     <div class="carousel--card carousel--card-4">
-
+                        <p class="carousel--card--content"><em><strong style="color: #efefef;font-size: 40px;letter-spacing: 2px">
+                            УРАВНЕНИЯ ФИГУР</strong></em></p>
                     </div>
                     <div class="carousel--card carousel--card-5">
-
+                        <p class="carousel--card--content"><em><strong style="color: #efefef;font-size: 40px;letter-spacing: 2px">
+                            МЕТОД КООРДИНАТ</strong></em></p>
                     </div>
-            </div>
-            <div class="navigation-manual">
-                <label for="radio1" class="manual-btn"></label>
-                <label for="radio2" class="manual-btn"></label>
-                <label for="radio3" class="manual-btn"></label>
-                <label for="radio4" class="manual-btn"></label>
-                <label for="radio5" class="manual-btn"></label>
             </div>
         </div>
         <div class="main">
