--- a/src/main/resources/static/css/base/footer.css
+++ b/src/main/resources/static/css/base/footer.css
@@ -1,7 +1,7 @@
 footer {
     width: 100%;
     height: 8rem;
-    background: #25272B;
+    background: #262626;
 }
 
 .footer-flexbox {
@@ -53,7 +53,7 @@ footer {
 }
 .social-links {
     white-space: nowrap;
-    border-top: 1px solid rgba(219, 42, 74, 0.81);
+    border-top: 1px solid #45a0da;
 }
 .social-links-img {
     vertical-align: middle;
