--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -7,7 +7,6 @@ main {
     justify-content: space-between;
     padding: 50px 50px 100px 80px;
 }
-
 .grid-content {
     background-color: rgba(0,0,0,3%);
     border-radius: 20px;
@@ -161,10 +160,10 @@ main {
 .carousel--card {
     width: 100%;
     height: 200px;
-    background-color: white;
-    box-shadow: 0px 4px 8px 5px rgb(34 60 80 / 17%);
+    background-color: #010202;
     border-radius: 0;
 }
+
 .carousel--ul {
     display: flex;
     overflow: hidden;
@@ -183,34 +182,18 @@ main {
     margin-left: auto;
 }
 .carousel--card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     transition: all 1s ease-out;
     width: 1573px;
+    cursor: pointer;
 }
 .carousel--ul li {
     width: 100%;
 }
 .carousel input {
     display: none;
-}
-.navigation-manual {
-    position: absolute;
-    width: 100%;
-    margin-top: -27px;
-    display: flex;
-    justify-content: center;
-}
-.manual-btn {
-    border: 2px solid #ffffffa6;
-    padding: 6px;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: 1s;
-}
-.manual-btn:not(:last-child) {
-    margin-right: 40px;
-}
-.manual-btn:hover {
-    background: #fffafa;
 }
 #radio1:checked ~ .carousel--card-1 {
     margin-left: 0;
@@ -228,23 +211,21 @@ main {
     margin-left: -6292px;
 }
 .carousel--card-1 {
-    background-image: url("../img/carousel/C1.gif");
     border-top-left-radius: 6px;
     border-bottom-left-radius: 6px;
 }
-.carousel--card-2 {
-    background-image: url("../img/carousel/C2.gif");
-}
-.carousel--card-3 {
-    background-image: url("../img/carousel/C3.gif");
-}
-.carousel--card-4 {
-    background-image: url("../img/carousel/C4.gif");
-}
+
 .carousel--card-5 {
-    background-image: url("../img/carousel/C5.gif");
     border-top-right-radius: 6px;
     border-bottom-right-radius: 6px;
+}
+.carousel--card p {
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 }
 .grid-column1-row1 {
     background-image: url("../img/card/Pythagorean.gif");
@@ -264,6 +245,11 @@ main {
 .grid-content {
     box-shadow: -1px -1px 10px 8px rgb(0 0 0 / 4%);
 }
-body {
-    background-color: #FFFAFA;
+@font-face {
+    font-family: "Myriad Pro";
+    src: url("../font/Myriad Pro/MYRIADPRO-BOLDCOND.OTF") format("otf");
+}
+.carousel--card--content {
+    color: white;
+    font-family: "Myriad Pro";
 }
