--- a/src/main/resources/templates/base/header.html
+++ b/src/main/resources/templates/base/header.html
@@ -6,7 +6,7 @@
     <body>
 
         <div class="header"  th:fragment="copy">
-            <a th:href="@{/}"><img th:src="@{/img/logo.svg}" class="logo-img" alt=""></a>
+            <a th:href="@{/}"><img th:src="@{/img/logo_white.svg}" class="logo-img" alt=""></a>
 
                 <ul class="nav-links">
                     <li><a href="#" class="nav-link">статьи</a></li>
@@ -17,7 +17,7 @@
                 </ul>
             <div class="register" sec:authorize="isAnonymous()">
                 <form th:action="@{/auth/login}" method="GET">
-                    <button class="register-button">Войти</button>
+                    <button class="register-button">Начать свое обучение</button>
                 </form>
             </div>
             <div class="loggedIn" sec:authorize="isAuthenticated()">
