Добавил станицу с настройками, доделал CRUD систему (теперь со всеми токенами), друзья временно недоступны,убрал ненужные функции

--- a/src/main/resources/static/css/base/bootstrap/modal.css
+++ b/src/main/resources/static/css/base/bootstrap/modal.css
@@ -290,3 +290,7 @@ h5.modal-title {
     font-weight: 500;
     font-size: 1.25rem;
 }
+
+html.pum-open.pum-open-overlay.pum-open-scrollable .pum-overlay.pum-active {
+    -webkit-overflow-scrolling: touch;}
+html { overflow-y: scroll !important; }
