--- a/src/main/resources/templates/admin/resetPasswordTokens.html
+++ b/src/main/resources/templates/admin/resetPasswordTokens.html
@@ -34,33 +34,30 @@
 <main id="mainDiv">
     <nav style="min-width: 95%;max-width: 95%">
         <ul class="line-bottom" style="padding-left:0 !important;width: auto !important;">
-            <li style="font-weight:700;color: white !important; font-size: 17px; cursor: pointer">Пользователи</li>
-            <li><a style="font-weight: 700" class="nav-link" th:href="@{/admin/resetPasswordTokens}">Рег. Токены</a></li>
-            <li><a style="font-weight: 700" class="nav-link" th:href="@{/admin/verificationTokens}">Вериф. Токены</a></li>
+            <li><a style="font-weight:700;" class="nav-link" th:href="@{/admin/}">Пользователи</a></li>
+            <li><a style="font-weight: 700; color: white !important;" class="nav-link" th:href="@{/admin/resetPasswordTokens}">Рег. Токены</a></li>
+            <li><a style="font-weight: 700" class="nav-link" th:href="@{/admin/verificationTokens}">Вериф. токены</a></li>
         </ul>
     </nav>
+
+    <!-- Таблица  -->
     <div style="min-width: 270px;">
         <table class="table table-dark table-stripped table-hover table-borderless align-middle" style="table-layout: fixed;">
             <thead>
             <tr>
-                <td style="font-size:20px;font-weight: 600" class="td-name">Имя</td>
-                <td style="font-size:20px;font-weight: 600" class="td-email">E-Mail</td>
-                <td style="font-size:20px;font-weight: 600" class="td-role">Заблокирован</td>
-                <td style="font-size:20px;font-weight: 600" class="td-blocked">Активирован</td>
-                <td style="font-size:20px;font-weight: 600">Роль</td>
+                <td style="font-size:20px;font-weight: 600" class="td-name">ID</td>
+                <td style="font-size:20px;font-weight: 600" class="td-email">Токен</td>
+                <td style="font-size:20px;font-weight: 600" class="td-role">Дата окончания</td>
+                <td style="font-size:20px;font-weight: 600" class="td-blocked">Пользователь</td>
                 <td style="text-align:center;font-size:20px;font-weight: 600"><button class="btn btn-outline-primary">Новая сущность</button></td>
             </tr>
             </thead>
             <tbody id="tableBody">
-            <tr th:each="user : ${objects} ">
-                <td th:text="${user.getName()}"></td>
-                <td th:text="${user.getEmail()}"></td>
-                <td th:if="${user.getBlocked() == 1}"><i style="color:#a5eb78" class="fa-solid fa-check"></i></td>
-                <td th:if="${user.getBlocked() == 0}"><i style="color:#f44336" class="fa-solid fa-xmark"></i></td>
-                <td th:if="${user.getEnabled() == 1}"><i style="color:#a5eb78" class="fa-solid fa-check"></i></td>
-                <td th:if="${user.getEnabled() == 0}"><i style="color:#f44336" class="fa-solid fa-xmark"></i></td>
-                <td th:if="${user.getRole() == 'ROLE_USER'}">Пользователь</td>
-                <td th:if="${user.getRole() == 'ROLE_ADMIN'}">Администратор</td>
+            <tr th:each="token : ${objects} ">
+                <td th:text="${token.getId()}"></td>
+                <td th:text="${token.getToken()}"></td>
+                <td th:text="${token.getExpirationDate()}"></td>
+                <td th:text="${token.getUser().getName()}"></td>
                 <td style="text-align: center">
                     <div class="btn-group">
                         <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
@@ -83,6 +80,8 @@
         </ul>
     </div>
 </main>
+
+<!-- Модальное окно поиска -->
 <div class="modal fade" id="showSettingsModal" tabindex="-1" aria-labelledby="showSettingsModal" aria-hidden="true">
     <div class="modal-dialog modal-dialog-scrollable">
         <div class="modal-content" id="showSettingsModalContent">
@@ -95,22 +94,26 @@
                     <input id="findValue" style="border-top-right-radius: 0 !important;border-bottom-right-radius: 0 !important;" type="search" class="form-control rounded" placeholder="Например, placeholder@gmail.com" aria-label="Search" aria-describedby="search-addon" />
                     <button id="find" type="button" class="btn btn-outline-primary">Поиск</button>
                 </div>
+
+                <!-- Поиск по -->
+
                 <p><span style="margin-right:10px">Искать по: </span> <select th:name="findBy" th:id="findBy" style="padding-left: 5px;padding-right: 5px">
-                    <option th:selected="${findBy eq 'name'}" th:value="name">Имя</option>
-                    <option th:selected="${findBy eq 'email'}" th:value="email">E-Mail</option>
-                    <option th:selected="${findBy eq 'blocked'}" th:value="blocked">Заблокирован</option>
-                    <option th:selected="${findBy eq 'activated'}" th:value="activated">Активирован</option>
-                    <option th:selected="${findBy eq 'role'}" th:value="role">Роль</option>
+                    <option th:selected="${findBy eq 'name'}" th:value="id">ID</option>
+                    <option th:selected="${findBy eq 'email'}" th:value="token">Токену</option>
+                    <option th:selected="${findBy eq 'activated'}" th:value="user">Пользователю</option>
                 </select></p>
+
+                <!-- Сортировка по -->
+
+
                 <p><span style="margin-right:10px">Записей на страницу:</span> <input id="ipp" th:value="${itemsPerPage}" value="15" type="tel"></p>
                 <p><span style="margin-right:10px">Сортировать по:</span> <select th:id="sortBy" th:name="sortBy" style="padding-left: 5px;padding-right: 5px">
                     <option th:selected="${sortBy eq 'noSort'}" th:value="noSort">-</option>
-                    <option th:selected="${sortBy eq 'name'}" th:value="name">Имя</option>
-                    <option th:selected="${sortBy eq 'email'}" th:value="email">E-Mail</option>
-                    <option th:selected="${sortBy eq 'blocked'}" th:value="blocked">Заблокирован</option>
-                    <option th:selected="${sortBy eq 'enabled'}" th:value="enabled">Активирован</option>
-                    <option th:selected="${sortBy eq 'role'}" th:value="role">Роль</option>
+                    <option th:selected="${sortBy eq 'name'}" th:value="id">ID</option>
+                    <option th:selected="${sortBy eq 'email'}" th:value="token">Токену</option>
+                    <option th:selected="${sortBy eq 'activated'}" th:value="user">Пользователю</option>
                 </select></p>
+
                 <p><span style="margin-right:10px">Сортировать в порядке:</span> <select th:name="sortDirection" th:id="sortDirection" style="padding-left: 5px;padding-right: 5px">
                     <option th:selected="${sortDirection eq 'asc'}" th:value="asc">возрастания</option>
                     <option th:selected="${sortDirection ne 'asc'}" th:value="desc">убывания</option>
@@ -124,7 +127,7 @@
     </div>
 </div>
 <script th:inline="javascript">
-    let clazz = "user"
+    let clazz = "resetPasswordToken"
     let totalEntities = [[${totalEntities}]];
     let sortByValue = [[${sortBy}]];
      let findByValue = [[${findBy}]];
@@ -137,24 +140,13 @@
      const successFunction = (data) => {
         $("#tableBody").empty();
         for (index = 0;index < data.length;index++) {
-            let third = null;
-            let fourth = null;
-            if(data[index].blocked == 1)
-                third =`<td><i style="color:#a5eb78" class="fa-solid fa-check"></td>`;
-            else
-                third =`<td><i style="color:#f44336" class="fa-solid fa-xmark"></i></td>`;
-            if(data[index].enabled == 1)
-                fourth =`<td><i style="color:#a5eb78" class="fa-solid fa-check"></td>`;
-            else
-                fourth =`<td><i style="color:#f44336" class="fa-solid fa-xmark"></i></td>`;
-            let role = data[index].role === "ROLE_ADMIN" ? "Администратор" : "Пользователь";
+
             let tr =
                 `<tr>
-                 <td>${data[index].name}</td>
-                 <td>${data[index].email}</td>
-                 ${third}
-                 ${fourth}
-                 <td>${role}</td>
+                 <td>${data[index].id}</td>
+                 <td>${data[index].token}</td>
+                 <td>${data[index].expirationDate}</td>
+                 <td>${data[index].user}</td>
                  ${button}
                 </tr>`;
             $("#tableBody").append(tr);
@@ -165,55 +157,61 @@
 
     const editFunc = (target) => {
      let actions = target.parentElement.parentElement;
-            let tr = target.parentElement.parentElement.parentElement.parentElement.parentElement;
-            let children = tr.children;
-            let blocked = children[2].children[0].classList.contains("fa-xmark") ? "" : "checked";
-            let activated = children[3].children[0].classList.contains("fa-xmark") ? "" : "checked";
-            let selectedAdmin = children[4].textContent.startsWith("Админ") ? "selected" : "";
-            let selectedUser = children[4].textContent.startsWith("Польз") ? "selected" : "";
-            $(children[1]).replaceWith(`<td><input type="email" value="${children[1].textContent}"></td>`);
-            $(children[2]).replaceWith(`<td><input ${blocked} type="checkbox" value="blocked"></td>`);
-            $(children[3]).replaceWith(`<td><input ${activated} type="checkbox" value="activated"></td>`);
-            $(children[4]).replaceWith(`<td><select><option ${selectedAdmin} value="admin">Администратор</option><option ${selectedUser} value="user">Пользователь</option></select></td>`);
-            $(actions.children[0]).replaceWith("<li><a class='dropdown-item' href='#'>Применить</a></li>")
+     let tr = target.parentElement.parentElement.parentElement.parentElement.parentElement;
+      let children = tr.children;
+      $(children[2]).replaceWith(`<td><input type="date" value="${children[2].textContent}"></td>`);
+      $(actions.children[0]).replaceWith("<li><a class='dropdown-item' href='#'>Применить</a></li>")
     }
 
     const saveFunc = (target) => {
     let actions = target.parentElement.parentElement;
         let hasToBeSaved = target.textContent === "Сохранить";
-            let tr = hasToBeSaved ? target.parentElement.parentElement : target.parentElement.parentElement.parentElement.parentElement.parentElement;
-            let children = tr.children;
-            let blocked = children[2].children[0].checked;
-            let activated = children[3].children[0].checked;
-            let isAdmin = children[4].children[0].value == "admin";
-            let email = children[1].children[0].value
-            let username = hasToBeSaved ? children[0].children[0].value : children[0].textContent;
+        let token = '';
+        let children = '';
+        let id = '';
+        let username = '';
+        let expirationDate = '';
+        if(hasToBeSaved) {
+             let tr =target.parentElement.parentElement;
+             children = tr.children;
+             token = children[1].children[0].value;
+             id = children[0].children[0].value;
+             username = children[3].children[0].value;
+             expirationDate = children[2].children[0].value;
+        } else {
+             let tr = target.parentElement.parentElement.parentElement.parentElement.parentElement;
+             children = tr.children;
+             id =  children[0].textContent;
+             username = children[3].textContent;
+             token = children[1].textContent;
+             expirationDate = children[2].children[0].value;
+        }
+
             $.ajax({
-                url: "/admin/ajax/updatePerson",
+                url: "/admin/ajax/updateResetPasswordToken",
                 type: "PATCH",
                 data: ({
+                    tokenString: token,
+                    date: expirationDate.toString() + " 23:59:59",
                     username: username,
-                    email: email,
-                    blocked: blocked,
-                    activated: activated,
-                    role: isAdmin ? "ROLE_ADMIN" : "ROLE_USER"
+                    id: id,
                 }),
                 success: function (data) {
                     toastr.options.preventDuplicates = true;
                     toastr.options.progressBar = true;
+                    data = data.split(" ");
                     if(data) {
                         toastr.success("","Успех!");
-                        $(children[1]).replaceWith(`<td>${email}</td>`);
-                        $(children[2]).replaceWith(`<td>${blocked ? `<i style="color:#a5eb78" class="fa-solid fa-check"></i>` : `<i style="color:#f44336" class="fa-solid fa-xmark"></i>`} </td>`);
-                        $(children[3]).replaceWith(`<td>${activated ? `<i style="color:#a5eb78" class="fa-solid fa-check"></i>` : `<i style="color:#f44336" class="fa-solid fa-xmark"></i>`} </td>`);
-                        $(children[4]).replaceWith(`<td>${isAdmin ? "Администратор" : "Пользователь"}</td>`);
+                        $(children[1]).replaceWith(`<td>${data[0]}</td>`);
+                        $(children[2]).replaceWith(`<td>${expirationDate.toString() + "T23:59:59"} </td>`);
+                        $(children[3]).replaceWith(`<td>${username} </td>`);
                         if(!hasToBeSaved) $(actions.children[0]).replaceWith("<li><a class='dropdown-item' href='#'>Редактировать</a></li>")
                         else {
-                            $(children[0]).replaceWith(`<td>${username}</td>`);
+                            $(children[0]).replaceWith(`<td>${data[1]}</td>`);
                             totalEntities+=1;
                             itemsPerPage = Number(itemsPerPage) + 1;
                             total = Math.ceil(totalEntities / itemsPerPage);
-                            $(children[5]).replaceWith(button);
+                            $(children[4]).replaceWith(button);
                             $("#ipp").val(itemsPerPage);
                             $("#totalCounter").text(`из ${total} страница`);
                         }
@@ -234,6 +232,7 @@
                 success: function (data) {
                     toastr.options.preventDuplicates = true;
                     toastr.options.progressBar = true;
+
                     if(data) {
                         toastr.success("","Успех!");
                         totalEntities-=1;
@@ -250,11 +249,10 @@
         let tableBody = $("#tableBody");
             tableBody.prepend(
                 `<tr>
+                    <td><input disabled type="disabled"></td>
+                    <td><input disabled type="disabled"></td>
+                    <td><input type="date"></td>
                     <td><input type="text"></td>
-                    <td><input type="email"></td>
-                    <td><input type="checkbox" value="blocked"></td>
-                    <td><input type="checkbox" value="activated"></td>
-                    <td><select><option value="admin">Администратор</option><option value="user">Пользователь</option></select></td>
                     <td style="text-align: center"><button class="btn btn-outline-success">Сохранить</button></td>
                 </tr>`)
     }
